2008-05-30  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (unhide-a-child-from-all-frames): Unhide a
	child from a choice in all frames with hidden children.

	* src/clfswm-info.lisp (info-mode-menu): Handle separators.

2008-05-28  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (hide-current-child, unhide-a-child)
	(unhide-all-children): New functions.

	* src/clfswm-info.lisp (info-mode-menu): Handle symbols and
	functions.

	* src/clfswm-util.lisp (hide/show-frame-window): new function and
	menu item.

2008-05-23  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (rename-current-child): Do not display the
	frame info for a window.

2008-05-20  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (remove-child-in-frame): Destroy the
	frame window for the removed child and its children.

2008-05-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-autodoc.lisp (produce-*-doc-*): Add a note to use the
	autodoc functions.

2008-05-17  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-nw-hooks.lisp (default-frame-nw-hook): Do not handle
	the ROX pinboard (ie: leave it lowered in the root window as
	expected).

	* src/clfswm-layout.lisp (tile-left-space-layout): New layout.
	(tile-left-layout, tile-right-layout, tile-top-layout)
	(tile-bottom-layout): Use all the frame space when there is only
	one child.

	* src/clfswm-internal.lisp (place-window-from-hints): Center
	unmanaged windows in the root screen.

	* src/clfswm-nw-hooks.lisp (clear-nw-hook, clear-all-nw-hooks):
	new functions.

2008-05-15  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (current-frame-manage-window-type): Fix a
	typo in managed types.

	* src/clfswm-internal.lisp (show-child): Always display frame info
	even if the frame is hidden.

	* src/xlib-util.lisp (resize-window): Use a better algorithme to
	resize windows.
